fix: overlapping progress

--- a/content/assets/css/styles.css
+++ b/content/assets/css/styles.css
@@ -480,7 +480,7 @@ margin-top: 4.5rem;
 .circle-progress {
   fill: none;
   stroke-width: 6px;
-  stroke-dasharray: 480;
+  stroke-dasharray: 600;
   stroke-dashoffset: 480;
   transition: stroke-dashoffset 4s linear;
 }
